# fiap_tech_challenge_fase5_teste

./: CHANGELOG.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  REVIEW.md  docker-compose.yml  dvc.yaml  pyproject.toml  teste.ipynb
configs/: prometheus.yml
configs/grafana/provisioning/dashboards/json/: api-overview.json
data/chromadb/: chroma.sqlite3
data/features/: stock_features.parquet
data/minio/.minio.sys/: format.json
data/minio/mlflow-artifacts/1/b0d6c4f6c6b542e49a6b3005a831f454/artifacts/model/data/model.keras/7a060481-272b-4e6e-9c2b-0765229c8a00/: part.1
data/minio/mlflow-artifacts/1/c113a04700ec4671b25f7baa3797cb12/artifacts/model/data/model.keras/f7e30fbc-9fdb-446a-b4b3-2e63ce6e906f/: part.1
data/minio/mlflow-artifacts/1/fa6f19e4720448d49a4fd81f6a7269fc/artifacts/model/data/model.keras/15dd0d9b-e5ab-485c-9766-be2a923801f1/: part.1
data/mlflow/: mlflow.db
data/models/: lstm_model_b0d6c4f6c6b542e49a6b3005a831f454.keras  lstm_model_fa6f19e4720448d49a4fd81f6a7269fc.keras  scaler_fa6f19e4720448d49a4fd81f6a7269fc.pkl  scaler_latest.pkl
data/raw/: raw_stock_data.parquet
docs/: AGENT_PREDICTION.md  DEBUGGING_AGENT.md  LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
feast/: feature_store.yaml  feature_store_definitions.py
feast/data/feast/: registry.db
mlruns/0/: meta.yaml
src/: __init__.py
src/agent/: __init__.py  rag_pipeline.py  react_agent.py  seed_rag.py  tools.py
src/config/: __init__.py  settings.py  storage.py
src/data/: __init__.py  ingestion.py
src/features/: __init__.py  feature_engineering.py  feature_store_client.py
src/models/: __init__.py  baseline.py  train.py
src/monitoring/: __init__.py  drift.py  metrics.py
src/security/: __init__.py  guardrails.py  pii_detection.py
src/serving/: Dockerfile  app.py
tests/: conftest.py  test_api.py  test_features.py  test_models.py
