[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiap-tc-fase5"
version = "0.1.0"
description = "FIAP Tech Challenge Fase 5 — MLOps/LLMOps Cloud-Agnostic Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FIAP Datathon Team", email = "team@example.com" }
]

dependencies = [
    # ── Core Python Stack ─────────────────────────────────────────────────────
    "pandas>=2.2.0,<2.3.0",
    "numpy>=1.26.4,<2.0.0",
    "pyarrow>=15.0.0,<17.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "joblib>=1.4.0,<1.5.0",
    "rich>=13.7.1,<14.0.0",
    
    # ── Data & Features ───────────────────────────────────────────────────────
    "yfinance>=0.2.38,<0.3.0",
    "ta>=0.11.0,<0.12.0",
    
    # ── Storage (cloud-agnostic) ──────────────────────────────────────────────
    "fsspec>=2024.3.1,<2024.7.0",
    "s3fs>=2024.3.1,<2024.7.0",
    
    # ── ML Core ───────────────────────────────────────────────────────────────
    "scikit-learn>=1.4.2,<1.6.0",
    "tensorflow>=2.15.0,<2.17.0",
    "mlflow>=2.13.0,<2.15.0",
    
    # ── API ───────────────────────────────────────────────────────────────────
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "pydantic>=2.7.3,<2.9.0",
    "pydantic-settings>=2.3.4,<2.5.0",
    
    # ── Monitoring ────────────────────────────────────────────────────────────
    "prometheus-client>=0.20.0,<0.21.0",
    
    # ── Utilities ─────────────────────────────────────────────────────────────
    "structlog>=24.2.0,<25.0.0",
    "tenacity>=8.3.0,<9.0.0",
    "boto3>=1.34.0,<1.36.0",
]

[project.optional-dependencies]
# Dependências LLM/RAG (instalar separadamente se necessário)
llm = [
    "litellm>=1.40.0,<1.45.0",
    "langchain>=0.2.5,<0.3.0",
    "langchain-community>=0.2.5,<0.3.0",
    "chromadb==0.4.24",
    "sentence-transformers>=3.0.1,<3.1.0",
]

# Feature Store (instalar separadamente se necessário)
feast-support = [
    "feast[redis]>=0.39.0,<0.41.0",
]

# Cloud backends adicionais (opcional)
cloud = [
    "gcsfs>=2024.3.1,<2024.7.0",
    "adlfs>=2024.4.0,<2024.7.0",
]

# Drift detection (opcional)
monitoring = [
    "evidently>=0.4.30,<0.5.0",
]

# Security/PII (opcional)
security = [
    "presidio-analyzer>=2.2.355,<2.3.0",
    "presidio-anonymizer>=2.2.355,<2.3.0",
]

# Pipeline versioning (opcional)
pipeline = [
    "dvc>=3.50.0,<3.52.0",
]

# Desenvolvimento
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "pandera>=0.19.3",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "faker>=25.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["B008", "N803", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
strict_optional = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
